# brilliance-ray-tracer

./: Cargo.toml  README.md  TODO  perf.sh  pre-commit  profile.pprof  rustfmt.toml
brilliance/: Cargo.toml
brilliance-ui/: Cargo.toml
brilliance-ui/src/: bakery.rs  cli.rs  key.rs  lib.rs
brilliance/benches/: benchmarks.rs
brilliance/src/: lib.rs
brilliance/src/api/: cameras.rs  lights.rs  materials.rs  mod.rs  objects.rs
brilliance/src/math/: f32x4.rs  mappings.rs  matrix.rs  mod.rs  num_traits.rs  point.rs  transform.rs  util.rs  vec3.rs  vectorx4.rs
brilliance/src/tests/: camera_tests.rs  light_tests.rs  mod.rs  testlib.rs  tests.rs  testspec.rs
brilliance/src/tracer/: boundingbox.rs  camera.rs  color.rs  dynobj.rs  hitrecord.rs  imageio.rs  img.rs  light.rs  material.rs  mod.rs  object.rs  ray.rs  render.rs  rng.rs  scene.rs  tex_coords.rs  texture.rs  uvmap.rs  vertex_normal.rs  view.rs
brilliance/src/tracer/debug/: group.rs  mod.rs
brilliance/src/tracer/lights/: mod.rs  point_light.rs  pointlight.rs  sphere_light.rs  with_object.rs
brilliance/src/tracer/materials/: blend.rs  flat.rs  geomnormal.rs  internal.rs  matte.rs  mod.rs  reflective.rs  shadingnormal.rs  specular.rs  translucent.rs
brilliance/src/tracer/objects/: boundingbox4.rs  face.rs  mod.rs  qtree.rs  quad.rs  shape.rs  sphere.rs  transformed.rs  vertex.rs  wavefrontobj.rs  with_material.rs
brilliance/src/util/: mod.rs  mpmc.rs  result.rs
brilliance/testdata/: .gitignore
planetarium/: .gitignore  Cargo.toml  README.md  encode.sh  main.rs
(+8 files in other folders)
