[package]
name = "brilliance_ui"
version = "0.1.0"
authors = ["Arne Vansteenkiste <barnex@gmail.com>"]
edition = "2018"

[dependencies]
brilliance = { path = "../brilliance" }
sdl2 = {version = "0.33", features = ["bundled"] }
num_cpus = "1.13.0"

[[bin]]
name = "brilliance-ui"
path = "src/bin/brilliance-ui.rs"